--- a/02_predictive_models_for_whole_sample/group 1/RF_full.ipynb
+++ b/02_predictive_models_for_whole_sample/group 1/RF_full.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This script runs the random forest model using the full set of predictors, for all non-first-term courses. It also creates the predictor crosswalk."
+    "This script runs the random forest model using the full set of predictors, for all non-first-term courses. It also creates the predictor crosswalk as well as the data set that contains all predicted scores for all non-first-term observations."
    ]
   },
   {
@@ -168,6 +168,13 @@
     "train_df.loc[:,'grade'] = train_df.apply(lambda x: 1 if x.loc['grade'] in {'A','B','C'} else 0, axis=1)\n",
     "test_df.loc[:,'grade'] = test_df.apply(lambda x: 1 if x.loc['grade'] in {'A','B','C'} else 0, axis=1)\n",
     "print(train_df.shape,test_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fine-tune and fit RF models"
    ]
   },
   {
@@ -622,7 +629,195 @@
    "source": [
     "print(\"Random Forest:\")\n",
     "print(\"AUC = {}\".format(round(roc_auc_score(test_df.grade, rf.predict_proba(test_df.loc[:,predictors])[:,1]),4)))\n",
-    "y_test_pred_rf = rf.predict_proba(test_df.loc[:,predictors])[:,1]"
+    "y_test_pred_rf = rf.predict_proba(test_df.loc[:,predictors])[:,1]\n",
+    "y_train_pred_rf = rf.predict_proba(train_df.loc[:,predictors])[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_threshold = np.sort(y_test_pred_rf)[int(len(y_test_pred_rf) * (1-np.mean(train_df.grade)))-1]\n",
+    "y_test_pred_rf_bin = np.where(y_test_pred_rf > best_threshold, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "threshold_train = np.sort(y_train_pred_rf)[int(len(y_train_pred_rf) * (1-np.mean(train_df.grade)))-1]\n",
+    "y_train_pred_rf_bin = np.where(y_train_pred_rf > threshold_train, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the data set for storing the predicted scores of admin+lms, admin_only, lms_only RF models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "info_df_test = test_df.loc[:,['vccsid', 'strm', 'college', 'course', 'section'] + predictors]\n",
+    "info_df_test.loc[:,'actual_grade'] = original_test_grade\n",
+    "info_df_test.loc[:,'predicted_binary_outcome_full_predictor'] = y_test_pred_rf_bin\n",
+    "info_df_test.loc[:,'predicted_score_full_predictor'] = y_test_pred_rf\n",
+    "info_df_test = info_df_test.loc[:, ['vccsid', 'strm', 'college', 'course', 'section', 'predicted_score_full_predictor', 'predicted_binary_outcome_full_predictor', 'actual_grade'] + predictors]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lms_1 = pd.read_stata(\"~\\\\Box Sync\\\\Clickstream\\\\data\\\\full\\\\updated\\\\LMS_data_updated.dta\").drop(['grade'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(info_df_test.shape)\n",
+    "info_df_test = info_df_test.merge(lms_1, on=['vccsid', 'strm', 'college', 'course', 'section'], how='left')\n",
+    "print(info_df_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for cn in info_df_test.columns.values:\n",
+    "    if cn.endswith(\"_x\"):\n",
+    "        info_df_test.rename(columns = {cn: cn[:-2]}, inplace=True)\n",
+    "    if cn.endswith(\"_y\"):\n",
+    "        info_df_test.rename(columns = {cn: cn[:-1] + \"raw\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "info_df_train = train_df.loc[:,['vccsid', 'strm', 'college', 'course', 'section'] + predictors]\n",
+    "info_df_train.loc[:,'actual_grade'] = original_train_grade\n",
+    "info_df_train.loc[:,'predicted_binary_outcome_full_predictor'] = y_train_pred_rf_bin\n",
+    "info_df_train.loc[:,'predicted_score_full_predictor'] = y_train_pred_rf\n",
+    "info_df_train = info_df_train.loc[:, ['vccsid', 'strm', 'college', 'course', 'section', 'predicted_score_full_predictor', 'predicted_binary_outcome_full_predictor', 'actual_grade'] + predictors]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(info_df_train.shape)\n",
+    "info_df_train = info_df_train.merge(lms_1, on=['vccsid', 'strm', 'college', 'course', 'section'], how='left')\n",
+    "print(info_df_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for cn in info_df_train.columns.values:\n",
+    "    if cn.endswith(\"_x\"):\n",
+    "        info_df_train.rename(columns = {cn: cn[:-2]}, inplace=True)\n",
+    "    if cn.endswith(\"_y\"):\n",
+    "        info_df_train.rename(columns = {cn: cn[:-1] + \"raw\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "info_df_train.loc[:,'is_validation'] = 0\n",
+    "info_df_test.loc[:,'is_validation'] = 1\n",
+    "info_df = pd.concat([info_df_train, info_df_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### After executing the scripts \"RF_admin_only.ipynb\" and \"RF_lms_only.ipynb\":\n",
+    "print(info_df.shape)\n",
+    "info_df = info_df.merge(pd.read_csv(\"~\\\\Box Sync\\\\Clickstream\\\\data\\\\full\\\\updated\\\\info_df_admin_only.csv\"), on=['vccsid', 'strm', 'college', 'course', 'section']).merge(pd.read_csv(\"~\\\\Box Sync\\\\Clickstream\\\\data\\\\full\\\\updated\\\\info_df_lms_only.csv\"), on=['vccsid', 'strm', 'college', 'course', 'section'])\n",
+    "print(info_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "var_list_1 = ['vccsid', 'strm', 'college', 'course', 'section', 'is_validation', 'predicted_score_full_predictor', 'predicted_binary_outcome_full_predictor', 'predicted_score_admin_only', 'predicted_binary_outcome_admin_only', 'predicted_score_lms_only', 'predicted_binary_outcome_lms_only']\n",
+    "var_list_2 = [p for p in info_df.columns.values if p not in set(var_list_1)]\n",
+    "var_list = var_list_1 + var_list_2\n",
+    "info_df = info_df.loc[:,var_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "info_df.to_csv(\"~\\\\Box Sync\\\\Clickstream\\\\data\\\\full\\\\updated\\\\nonfirst_term_dataset.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compare online vs. in-person courses"
    ]
   },
   {
@@ -710,18 +905,6 @@
    "source": [
     "print(\"Random Forest:\")\n",
     "print(\"In-person AUC = {}\".format(round(roc_auc_score(test_df[np.array(inperson_ind == 1)].grade, np.array(y_test_pred_rf)[np.array(inperson_ind == 1)]),4)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pred_df_1 = pd.DataFrame({'pred_y': y_test_pred_rf, 'real_y': y_test_grade, 'course': list(test_df.course)})\n",
-    "pred_df_1.to_csv(\"~\\\\Box Sync\\\\Clickstream\\\\evaluation_results\\\\full\\\\pred_df_1.csv\")"
    ]
   },
   {
