--- a/02_predictive_models_for_whole_sample/group 1/RF_lms_only_firstterm_num_of_predictors.ipynb
+++ b/02_predictive_models_for_whole_sample/group 1/RF_lms_only_firstterm_num_of_predictors.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This script is used to find out how model performance changes with number of predictors for the admin-only, first-term model."
+    "This script is used to find out how model performance changes with number of predictors for the lms-only, first-term model."
    ]
   },
   {
