--- a/02_predictive_models_for_whole_sample/group 3/RF_full_inperson_vs_online.ipynb
+++ b/02_predictive_models_for_whole_sample/group 3/RF_full_inperson_vs_online.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This script fits the non-first-term model using exclusively in-person observations vs. the model using exclusively online observations."
+    "This script fits the non-first-term full-predictor model using exclusively in-person observations vs. the model using exclusively online observations."
    ]
   },
   {
