--- a/02_predictive_models_for_whole_sample/group 1/RF_admin_only.ipynb
+++ b/02_predictive_models_for_whole_sample/group 1/RF_admin_only.ipynb
@@ -283,6 +283,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fine-tune and fit RF models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -719,7 +726,54 @@
    "source": [
     "print(\"Random Forest:\")\n",
     "print(\"AUC = {}\".format(round(roc_auc_score(test_df.grade, rf.predict_proba(test_df.loc[:,predictors])[:,1]),4)))\n",
-    "y_test_pred_rf = rf.predict_proba(test_df.loc[:,predictors])[:,1]"
+    "y_test_pred_rf = rf.predict_proba(test_df.loc[:,predictors])[:,1]\n",
+    "y_train_pred_rf = rf.predict_proba(train_df.loc[:,predictors])[:,1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the predicted scores of admin_only RF model for both training and validation samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_threshold = np.sort(y_test_pred_rf)[int(len(y_test_pred_rf) * (1-np.mean(train_df.grade)))-1]\n",
+    "y_test_pred_rf_bin = np.where(y_test_pred_rf > best_threshold, 1, 0)\n",
+    "threshold_train = np.sort(y_train_pred_rf)[int(len(y_train_pred_rf) * (1-np.mean(train_df.grade)))-1]\n",
+    "y_train_pred_rf_bin = np.where(y_train_pred_rf > threshold_train, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "info_df_test = test_df.loc[:,['vccsid', 'strm', 'college', 'course', 'section']]\n",
+    "info_df_test.loc[:,'predicted_binary_outcome_admin_only'] = y_test_pred_rf_bin\n",
+    "info_df_test.loc[:,'predicted_score_admin_only'] = y_test_pred_rf\n",
+    "info_df_train = train_df.loc[:,['vccsid', 'strm', 'college', 'course', 'section']]\n",
+    "info_df_train.loc[:,'predicted_binary_outcome_admin_only'] = y_train_pred_rf_bin\n",
+    "info_df_train.loc[:,'predicted_score_admin_only'] = y_train_pred_rf\n",
+    "info_df = pd.concat([info_df_train, info_df_test])\n",
+    "info_df.to_csv(\"~\\\\Box Sync\\\\Clickstream\\\\data\\\\full\\\\info_df_admin_only.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compare online vs. in-person courses"
    ]
   },
   {
@@ -857,6 +911,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate confusion matrices"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -949,13 +1010,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Feature importance"
+   ]
   },
   {
    "cell_type": "code",
